--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@types/react-datepicker": "^6.0.1",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.1",
