--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/addon-interactions": "^7.6.16",
     "@storybook/addon-links": "^7.6.16",
     "@storybook/addon-onboarding": "1.0.11",
+    "@storybook/addon-themes": "7.6.16",
     "@storybook/blocks": "^7.6.16",
     "@storybook/react": "^7.6.16",
     "@storybook/react-vite": "^7.6.16",
