--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
-    "@types/react-datepicker": "^6.0.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
@@ -38,10 +37,12 @@
     "@storybook/react-vite": "^7.6.16",
     "@storybook/test": "^7.6.16",
     "@types/react": "^18.2.55",
+    "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
