--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.24.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
+    "pocketbase": "^0.21.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
+    "typed-pocketbase": "^0.1.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -49,7 +51,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
-    "pocketbase": "^0.21.1",
     "prettier": "3.2.5",
     "storybook": "^7.6.16",
     "typescript": "^5.2.2",
