--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
+    "@types/react-modal": "^3.16.3",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.5",
     "pocketbase": "^0.21.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
