[Refactor] 여러가지 코드 리팩토링 - 2
- 타입스크립트 node_modules 검사 제외 설정
- ImageSwiper 타입 에러 수정
- AnimalPick 폴더 삭제

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/*.stories.tsx"],
+  "exclude": ["node_modules", "src/**/*.stories.tsx"],
   "references": [
     {
       "path": "./tsconfig.node.json"
