--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^6.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
