--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
+    "iamport-typings": "^1.4.0",
     "prettier": "3.2.5",
     "storybook": "^7.6.17",
     "typescript": "^5.4.2",
