--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet-async": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
     "typed-pocketbase": "^0.1.0",
